--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,12 @@ dependencies = [
     "gymnasium[box2d]>=1.2.0",
     "ipykernel>=6.30.1",
     "ipywidgets>=8.1.7",
+    "kaleido>=1.1.0",
     "matplotlib>=3.10.5",
     "moviepy>=2.2.1",
     "numpy>=2.3.2",
     "pettingzoo>=1.25.0",
+    "plotly>=6.3.1",
     "pygame>=2.6.1",
     "sb3-contrib>=2.7.0",
     "stable-baselines3>=2.7.0",
