--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,11 @@ dependencies = [
     "plotly>=6.3.1",
     "pygame>=2.6.1",
     "sb3-contrib>=2.7.0",
+    "seaborn>=0.13.2",
     "stable-baselines3>=2.7.0",
     "swig>=4.3.1",
     "torch==2.7",
+    "tqdm>=4.67.1",
     "transformers>=4.56.0",
     "trl>=0.22.1",
     "wandb>=0.21.1",
