Optimize win checking with numba compilation, disable opponent pool
Replace Python-based win checking algorithm with numba-compiled function for significant performance improvement. The new implementation uses explicit loops optimized through JIT compilation instead of recursive helper methods.

Also simplify environment observation structure by stacking player boards directly and remove redundant observation caching. Streamline training loop by removing opponent pool management in favor of direct updates.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "kaleido>=1.1.0",
     "matplotlib>=3.10.5",
     "moviepy>=2.2.1",
+    "numba>=0.60.0",
     "numpy>=2.3.2",
     "pettingzoo>=1.25.0",
     "plotly>=6.3.1",
